# CIDIA-GUI

./: CMakeLists.txt  Concept.cpp  Concept.h  Concept.ui  Concept1.cpp  Concept1.h  Concept1.ui  Concept2.cpp  Concept2.h  Concept2.ui  Concept3.cpp  Concept3.h  Concept3.ui  MainDisplay.cpp  MainDisplay.cpp.autosave  MainDisplay.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MovieMakerWindow.cpp  MovieMakerWindow.h  MovieMakerWindow.ui  README.md  SegmentationWindow.cpp  SegmentationWindow.h  SegmentationWindow.ui  Settings.cpp  Settings.h  SliceAnimationControls.cpp  SliceAnimationControls.h  StatisticsWindow.cpp  StatisticsWindow.h  StatisticsWindow.ui  ThumbnailListWidgetInterface.cpp  ThumbnailListWidgetInterface.h  Utils.cpp  Utils.h  VolumeVisualizationWindow.cpp  VolumeVisualizationWindow.h  VolumeVisualizationWindow.ui  (+2 more)
examples/: README.md
examples/Step1/: CMakeLists.txt  README.md  Step1.cpp
examples/Step3/: CMakeLists.txt  README.md  Step3.cpp
examples/Step4/: CMakeLists.txt  README.md
examples/Step5/: CMakeLists.txt  README.md
examples/Step6/: CMakeLists.txt  README.md  Step6.cpp  Step6.h
examples/Step7/: CMakeLists.txt
examples/Step8/: CMakeLists.txt  Step8.cpp  Step8.h
experiments/Carlo/: recent_discoveries.md
experiments/Carlo/FileLoading/: AppDataManager.cpp  AppDataManager.h  CMakeLists.txt  DataManagerView.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
experiments/Carlo/MenuBar/: CMakeLists.txt  MainWindow.ui  main.cpp
experiments/Carlo/MenuBar/SpaceXStyle/: SpaceXStyle.cpp  SpaceXStyle.h  SpaceXStyle.qrc
experiments/Carlo/MenuBar/SpaceXStyle/resource/: SpaceXStyle.qss
experiments/Carlo/MovieMaker/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
experiments/Carlo/MultipleWindows/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  Slicer.cpp  main.cpp  w3D.cpp  w3D.h  wMulti.cpp  wMulti.h
experiments/Carlo/QFileOpenDialog_Bug/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
experiments/Carlo/RenderingWindowWidget/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  Slicer.h  w3D.h
experiments/Carlo/Segmentation/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
experiments/Carlo/ThumbnailView/: CMakeLists.txt  MainWindow.cpp
lib/FramelessWindow/: CMakeLists.txt  FramelessWindowConfig.cmake
lib/FramelessWindow/include/: DarkStyle.h  FramelessWindow_global.h  framelesswindow.h  windowdragger.h
lib/GalleryCore/: CMakeLists.txt  GalleryCoreConfig.cmake  PictureDao.cpp  PictureModel.cpp
lib/GalleryCore/include/: DatabaseManager.h  PictureDao.h  PictureModel.h
modules/AppDataManager/: AppDataManager.cpp  AppDataManager.h  CMakeLists.txt
modules/DarkStyle/: CMakeLists.txt  DarkStyle.cpp  DarkStyle.h  darkstyle.qrc
modules/DataManagerView/: CMakeLists.txt  DataManagerView.cpp  DataManagerView.h  DataManagerView.ui
modules/MovieMaker/: CMakeLists.txt  QmitkAnimationWidget.h  QmitkMovieMakerView.cpp  QmitkMovieMakerView.h  QmitkMovieMakerView.ui  QmitkSliceAnimationItem.cpp  QmitkSliceAnimationWidget.cpp  moviemaker.qrc
modules/RenderWindows/: CMakeLists.txt  QRenderWidget.cpp  QRenderWidget.h  Qmitk2DRenderWidget.cpp  Qmitk2DRenderWidget.h  Qmitk3DRenderWidget.cpp  Qmitk3DRenderWidget.h  QmitkAbstractRenderWidget.cpp  QmitkAbstractRenderWidget.h
modules/Segmentation/: CMakeLists.txt  NvidiaDeepgrowSegTool2DGUI.cpp  NvidiaDextrSegTool3DGUI.cpp  NvidiaSmartPolySegTool2DGUI.cpp  QmitkConvertToMultiLabelSegmentationAction.h  QmitkMultiLabelSegmentationView.cpp  QmitkMultiLabelSegmentationView.h  QmitkMultiLabelSegmentationView.ui  QmitkNodeSelectionButton.cpp  QmitkNodeSelectionButton.h  QmitkNodeSelectionDialog.cpp  QmitkNodeSelectionDialog.h  QmitkSegmentationView.cpp  QmitkSegmentationView.h  QmitkSingleNodeSelectionWidget.cpp  QmitkSingleNodeSelectionWidget.h  SegmentationSettings.cpp  SegmentationSettings.h  SegmentationSettings.ui  segmentation.qrc
modules/Template/: CMakeLists.txt
modules/ThumbnailListView/: CMakeLists.txt  ThumbnailListLoader.cpp  ThumbnailListLoader.h  ThumbnailListView.cpp  ThumbnailListView.h
modules/VolumeVisualizationView/: CMakeLists.txt  VolumeVisualizationView.ui
plugins/: CMakeLists.txt
plugins/thumbnailListView/: CMakeLists.txt  ThumbnailListView.cpp  ThumbnailListWidget.h
plugins/thumbnailListWidget/: CMakeLists.txt  ThumbnailListView.h  ThumbnailListWidget.cpp  ThumbnailListWidget.h  ThumbnailProxyModel.cpp
source-code-modifications/: QmitkRenderWindowWidget.cpp  QmitkStdMultiWidget.cpp  README.md
widgets/DarkStyle/darkstyle/: darkstyle.qss
widgets/FramelessWindow/: CMakeLists.txt  DarkStyle.cpp  framelesswindow.cpp
widgets/ImageNavigator/: CMakeLists.txt  ImageNavigatorConfig.cmake  QmitkImageNavigatorView.h  imagenavigator.qrc
widgets/SpaceXStyle/: CMakeLists.txt  SpaceXStyle.cpp
widgets/SpaceXStyle/resource/: SpaceXStyle.qss
widgets/VolumeVisualizationView/: CMakeLists.txt  VolumeVisualizationView.cpp  VolumeVisualizationView.h
